@@ -557,7 +557,8 @@ public class PerformanceEvaluation implements HConstants {
     }
     
     protected int getReportingPeriod() {
-      return this.perClientRunRows / 10;
+      int period = this.perClientRunRows / 10;
+      return period == 0? this.perClientRunRows: period;
     }
     
     void testSetup() throws IOException {
@@ -630,8 +631,8 @@ public class PerformanceEvaluation implements HConstants {
  
     @Override
     protected int getReportingPeriod() {
-      // 
-      return this.perClientRunRows / 100;
+      int period = this.perClientRunRows / 100;
+      return period == 0? this.perClientRunRows: period;
     }
 
     @Override
@@ -655,8 +656,8 @@ public class PerformanceEvaluation implements HConstants {
 
     @Override
     protected int getReportingPeriod() {
-      // 
-      return this.perClientRunRows / 100;
+      int period = this.perClientRunRows / 100;
+      return period == 0? this.perClientRunRows: period;
     }
 
     @Override
@@ -930,12 +931,10 @@ public class PerformanceEvaluation implements HConstants {
     if(start + 1 > args.length) {
       throw new IllegalArgumentException("must supply the number of clients");
     }
-    
     N = Integer.parseInt(args[start]);
     if (N < 1) {
       throw new IllegalArgumentException("Number of clients must be > 1");
     }
-   
     // Set total number of rows to write.
     this.R = this.R * N;
   }
