@@ -160,7 +160,7 @@ public class TestHFileSeek extends TestCase {
     KeySampler kSampler =
         new KeySampler(rng, reader.getFirstKey(), reader.getLastKey(),
             keyLenGen);
-    HFileScanner scanner = reader.getScanner();
+    HFileScanner scanner = reader.getScanner(false, false);
     BytesWritable key = new BytesWritable();
     timer.reset();
     timer.start();
