@@ -51,7 +51,7 @@ public class TestSeekTo extends HBaseTestCase {
     Path p = makeNewFile();
     HFile.Reader reader = new HFile.Reader(fs, p, null, false);
     reader.loadFileInfo();
-    HFileScanner scanner = reader.getScanner();
+    HFileScanner scanner = reader.getScanner(false, true);
     assertEquals(false, scanner.seekBefore(Bytes.toBytes("a")));
     
     assertEquals(false, scanner.seekBefore(Bytes.toBytes("c")));
@@ -85,7 +85,7 @@ public class TestSeekTo extends HBaseTestCase {
     HFile.Reader reader = new HFile.Reader(fs, p, null, false);
     reader.loadFileInfo();
     assertEquals(2, reader.blockIndex.count);
-    HFileScanner scanner = reader.getScanner();
+    HFileScanner scanner = reader.getScanner(false, true);
     // lies before the start of the file.
     assertEquals(-1, scanner.seekTo(Bytes.toBytes("a")));
   
